[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = "2.0.0"
casper-engine-test-support = { version = "4.0.0", default-features = false, features = [
  "test-support",
] }
casper-execution-engine = { version = "4.0.0", default-features = false }

[lib]
name = "tests"
path = "src/lib.rs"
bench = false
doctest = false